Adding beer controller to OpenAPI
